# ocr-grade

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  MAINTAINERS.md  OPERATIONS.md  README.md  cleanup.command  config.example.yaml  config.yaml  ocr-grading-tool-plan.md  pyproject.toml  start.command
.github/workflows/: ci.yml
docs/: data-policy.md  deploy.md  mistral-setup.md  runbook.md
scripts/: check_fixture_paths.py  check_no_secrets.py  sample_sanity_check.py
src/ocr_grade/: __init__.py  cli.py  config.py  ingestion.py  pdf_assembler.py  pipeline.py  postprocess.py  preprocess.py  redaction.py  reporting.py  utils.py
src/ocr_grade/ocr/: __init__.py  base.py  cache.py  mistral.py
src/ocr_grade/web/: __init__.py  app.py  batches.py  settings.py
tests/: test_cli.py  test_config.py  test_ingestion.py  test_mistral_ocr.py  test_ocr_cache.py  test_orientation.py  test_pdf_assembler.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_redaction.py  test_web.py
tests/snapshots/test_pdf_assembler/test_golden_interleaved_text/: interleaved.txt
