[project]
name = "ocr-grade"
version = "0.1.0"
description = "Turn scanned handwritten exam PDFs into Gradescope-ready interleaved transcripts using Mistral OCR."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "pillow>=10",
    "opencv-python>=4.9",
    "pdf2image>=1.17",
    "pypdf>=4",
    "pikepdf>=8",
    "rich>=13",
    "tenacity>=8",
    "mistralai>=1",
    "markdown-it-py>=3",
    "weasyprint>=62",
]

[project.scripts]
ocr-grade = "ocr_grade.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-snapshot>=0.9",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_grade"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer/fastapi's Option(...)-as-default pattern is the documented,
# idiomatic usage -- not the mutable-default-argument bug bugbear is built for.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["ocr_grade"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
